--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0",
     "sass-loader": "^12.6.0",
-    "node-sass": "^7.0.1"
+    "node-sass": "^7.0.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb":"^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-ally": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "dependencies": {
     "react": "^17.0.1",
