--- a/package.json
+++ b/package.json
@@ -19,24 +19,30 @@
     "babel-loader": "^8.2.1",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "node-sass": "^7.0.1",
     "open-browser-webpack4-plugin": "^1.0.0",
+    "sass-loader": "^12.6.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "sass-loader": "^12.6.0",
-    "node-sass": "^7.0.1",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb":"^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-ally": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.8",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
+    "typescript": "^4.6.3"
   }
 }
