--- a/package.json
+++ b/package.json
@@ -37,12 +37,17 @@
   "dependencies": {
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.26.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.8",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.1",
     "typescript": "^4.6.3"
   }
 }
